--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.7"
   }
 }
